--- a/newcastle/index.html
+++ b/newcastle/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Share to Newcastle</title>
+    <title>Newcastle Photo Share</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
